Changed Add markers for dial selection

--- a/CameraEmguCV/MainWindow.xaml
+++ b/CameraEmguCV/MainWindow.xaml
@@ -22,11 +22,19 @@
                 <TextBlock Text="Options"  Margin="15" FontWeight="DemiBold"/>
                 <ListView FontSize="15" >
 
-                    <ListViewItem x:Name="btn_AddMarkers" Padding="1">
-                        <Button  Background="{x:Null}" BorderBrush="{x:Null}" BorderThickness="0" Click="BtnAddMarkers_Click" Width="248" Margin="0,10,0,10">
+                    <ListViewItem  Padding="1">
+                        <Button Name="btn_AddMarkers"  Background="{x:Null}" BorderBrush="{x:Null}" BorderThickness="0" Click="BtnAddMarkers_Click" Width="248" Margin="0,10,0,10">
                             <StackPanel Orientation="Horizontal" Width="230">
                                 <materialDesign:PackIcon Margin="0,0,15,0" Kind="ControlPoint" Height="20" Foreground="White"/>
                                 <TextBlock Text="Add Markers" VerticalAlignment="Center" Foreground="White"/>
+                            </StackPanel>
+                        </Button>
+                    </ListViewItem>
+                    <ListViewItem Padding="1">
+                        <Button Name="btnAddDialMarkers" Background="{x:Null}" BorderBrush="{x:Null}" BorderThickness="0" Click="BtnAddMarkers_Click" Width="248" Margin="0,10,0,10" IsEnabled="False">
+                            <StackPanel Orientation="Horizontal" Width="230">
+                                <materialDesign:PackIcon Margin="0,0,15,0" Kind="ControlPoint" Height="20" Foreground="White"/>
+                                <TextBlock Text="Add Dial Selection Markers" VerticalAlignment="Center" Foreground="White"/>
                             </StackPanel>
                         </Button>
                     </ListViewItem>
@@ -47,7 +55,6 @@
                                 <TextBlock Text="Define template" VerticalAlignment="Center" Foreground="White" />
                             </StackPanel>
                         </Button>
-
 
                     </ListViewItem>
                     <ListViewItem Padding="1">
@@ -117,7 +124,7 @@
         <Button Name="btnReset" Content="RESET!"  Margin="68,420,142,198"   Click="BtnReset_Click" Background="LightGray"/>-->
         <Button Name="btnAddMarkers" Content="Add Markers" Margin="-267,578,477,38" Click="BtnAddMarkers_Click" Background="LightGray" Height="Auto"/>
         <!--<Image HorizontalAlignment="Left" Height="122" Margin="467,479,0,0" VerticalAlignment="Top" Width="262" Name="image3" Grid.Column="1"/>-->
-        <ComboBox Name="cbxCameraDevices"  HorizontalAlignment="Left" Margin="55,420,0,0" VerticalAlignment="Top" Width="140" SelectionChanged="CbxCameraDevices_SelectionChanged" Background="LightGray"/>
+        <ComboBox Name="cbxCameraDevices"  HorizontalAlignment="Left" Margin="55,444,0,0" VerticalAlignment="Top" Width="140" SelectionChanged="CbxCameraDevices_SelectionChanged" Background="LightGray"/>
         <!--<Button x:Name="btnDebugWindow" Content="Debug Mode"  Margin="68,479,142,130"   Click="btnDebugWindow_Click" Background="LightGray" Height="Auto"/>-->
 
     </Grid>
