--- a/CameraEmguCV/DebugWindow.xaml
+++ b/CameraEmguCV/DebugWindow.xaml
@@ -37,9 +37,9 @@
             <TextBox Text="{Binding Value, ElementName=slHoughThresh, UpdateSourceTrigger=PropertyChanged}" DockPanel.Dock="Right" TextAlignment="Right" Width="40"/>
             <Slider Maximum="100" TickPlacement="BottomRight" TickFrequency="1" IsSnapToTickEnabled="True" x:Name="slHoughThresh" ValueChanged="SlHoughThresh_ValueChanged"/>
         </DockPanel>
-        <Button x:Name="btnWarp" Content="Warp perspective" Margin="249,12,387.6,376" Click="BtnWarp_Click" />
-        <Button x:Name="btnSingleLines" Content="SingleLines" Margin="431,12,204.6,376" Click="BtnSingleLines_Click"/>
-        <Button x:Name="btnPreviewTemplate" Content="Preview Template" Margin="616,12,20.6,376" Click="BtnPreviewTemplate_Click"/>
+        <!--<Button x:Name="btnWarp" Content="Warp perspective" Margin="249,12,387.6,376" Click="BtnWarp_Click" />
+        <Button x:Name="btnSingleLines" Content="SingleLines" Margin="431,12,204.6,376" Click="BtnSingleLines_Click"/>-->
+        <Button x:Name="btnPreviewTemplate" Content="Preview Template" Margin="266,10,370.6,378" Click="BtnPreviewTemplate_Click"/>
         <Canvas Width="200" Height="200" Name="secondaryCanvas" Margin="266,151,327.6,69">
             <Image Name="tempImage" Stretch="Uniform" Width="200" Height="200" />
         </Canvas>
