--- a/CameraEmguCV/MainWindow.xaml
+++ b/CameraEmguCV/MainWindow.xaml
@@ -7,22 +7,22 @@
         mc:Ignorable="d"
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         xmlns:fw="clr-namespace:SourceChord.FluentWPF;assembly=FluentWPF"
-        fw:AcrylicWindow.Enabled="True" Height="513" FontSize="15" Width="1215" Loaded="Window_Loaded" WindowStartupLocation="CenterScreen" Visibility="Visible" ResizeMode="NoResize" Opacity="0.995" Icon="icon.png" >
-       
-    <Grid Height="513" VerticalAlignment="Top" Margin="0,0,-8,-21">
+         Height="573" FontSize="15" Width="1215" Loaded="Window_Loaded" WindowStartupLocation="CenterScreen" Visibility="Visible" ResizeMode="NoResize" Opacity="0.995" Icon="icon.png" >
+
+    <Grid Height="573" VerticalAlignment="Top" >
 
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="250"></ColumnDefinition>
             <ColumnDefinition Width="*"></ColumnDefinition>
         </Grid.ColumnDefinitions>
-        <Grid Grid.Column="0" fw:PointerTracker.Enabled="True" Background="#01FFFFFF">
-            <StackPanel>
-                
-                
-                <TextBlock Text="Options"  Margin="15" FontWeight="DemiBold"/>
+        <Grid Grid.Column="0" fw:PointerTracker.Enabled="True" Background="#009999" >
+            <StackPanel >
+
+
+                <TextBlock Text="Options"  Margin="15" FontWeight="DemiBold" Foreground="White"/>
                 <ListView FontSize="15" >
 
-                    <ListViewItem  Padding="1">
+                    <ListViewItem  Padding="0">
                         <Button Name="btn_AddMarkers"  Background="{x:Null}" BorderBrush="{x:Null}" BorderThickness="0" Click="BtnAddMarkers_Click" Width="248" Margin="0,10,0,10">
                             <StackPanel Orientation="Horizontal" Width="230">
                                 <materialDesign:PackIcon Margin="0,0,15,0" Kind="ControlPoint" Height="20" Foreground="White"/>
@@ -84,13 +84,13 @@
                         </Button>
 
                     </ListViewItem>
-                    
+
                 </ListView>
 
             </StackPanel>
         </Grid>
 
-        <Grid Grid.Column="1" Background="Black">
+        <Grid Grid.Column="1" Background="White"  >
 
             <TreeView HorizontalAlignment="Left" Height="398" Margin="654,59,0,0" VerticalAlignment="Top" Width="287" x:Name="tree" BorderBrush="DarkGray" BorderThickness="1" >
 
@@ -116,16 +116,8 @@
         <Canvas Name="mainCanvas" Panel.ZIndex="1"    Width="640" Height="360" VerticalAlignment="Top"  HorizontalAlignment="Left" Grid.Column="1"  >
             <Image  Name="image1"  Height="360" Width="640" Panel.ZIndex="0" MouseLeftButtonDown="MainCanvas_MouseLeftButtonDown" MouseRightButtonDown="MainCanvas_MouseRightButtonDown"   />
         </Canvas>
-        <!--<Canvas Width="458" Name="secondaryCanvas" Margin="713,10,162,289" Grid.Column="1">
-            <Image Name="image2" Stretch="Uniform" Width="458" Height="350" />
-        </Canvas>-->
-        <!--<Button Name="btnShowImage" Content="Show image" Margin="97,576,961,36" Click="BtnShowImage_Click" Background="LightGray" Height="Auto" Grid.Column="1"/>
-        <Button Name="btnAddMarkers" Content="Add Markers" Margin="68,347,142,269" Click="BtnAddMarkers_Click" Background="LightGray" Height="Auto"/>
-        <Button Name="btnReset" Content="RESET!"  Margin="68,420,142,198"   Click="BtnReset_Click" Background="LightGray"/>-->
         <Button Name="btnAddMarkers" Content="Add Markers" Margin="-267,578,477,38" Click="BtnAddMarkers_Click" Background="LightGray" Height="Auto"/>
-        <!--<Image HorizontalAlignment="Left" Height="122" Margin="467,479,0,0" VerticalAlignment="Top" Width="262" Name="image3" Grid.Column="1"/>-->
         <ComboBox Name="cbxCameraDevices"  HorizontalAlignment="Left" Margin="55,444,0,0" VerticalAlignment="Top" Width="140" SelectionChanged="CbxCameraDevices_SelectionChanged" Background="LightGray"/>
-        <!--<Button x:Name="btnDebugWindow" Content="Debug Mode"  Margin="68,479,142,130"   Click="btnDebugWindow_Click" Background="LightGray" Height="Auto"/>-->
-
+      
     </Grid>
 </Window>
