--- a/CameraEmguCV/CadranDefinition.xaml
+++ b/CameraEmguCV/CadranDefinition.xaml
@@ -5,22 +5,25 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:CameraEmguCV"
         mc:Ignorable="d"
-        Title="Definire Cadran" Height="200" Width="335.165" ResizeMode="NoResize" Icon="icon.png" WindowStartupLocation="CenterScreen">
+        Title="Definire Cadran" Height="200" Width="335.165" ResizeMode="NoResize" Icon="icon.png" WindowStartupLocation="CenterScreen" Closing="Window_Closing">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition/>
             <ColumnDefinition Width="7*"/>
             <ColumnDefinition Width="48*"/>
         </Grid.ColumnDefinitions>
-        <TextBox Text="" x:Name="CadranName" HorizontalAlignment="Left" Height="24" Margin="10,40,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="103"  Grid.Column="1" Grid.ColumnSpan="2"/>
-        <Label Content="Name of the dial" Grid.Column="1" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Grid.ColumnSpan="2"/>
-        <Label Content="Type of the dial" Grid.Column="2" HorizontalAlignment="Left" Margin="140,10,0,0" VerticalAlignment="Top" Width="101"/>
-        <ComboBox x:Name="CadranType" Grid.Column="2" HorizontalAlignment="Left" Margin="140,40,0,0" VerticalAlignment="Top" Width="120" >
+        <TextBox Text="" x:Name="CadranName" HorizontalAlignment="Left" Height="24" Margin="154.8,40,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="103"  Grid.Column="2"/>
+        <Label Content="Name of the dial" Grid.Column="2" HorizontalAlignment="Left" Margin="154.8,10,0,0" VerticalAlignment="Top"/>
+        <Label Content="Type of the dial" Grid.Column="2" HorizontalAlignment="Left" Margin="151.8,73,0,0" VerticalAlignment="Top" Width="101"/>
+        <ComboBox x:Name="CadranType" Grid.Column="2" HorizontalAlignment="Left" Margin="151.8,103,0,0" VerticalAlignment="Top" Width="120" >
             <ComboBoxItem >Numeric</ComboBoxItem>
             <ComboBoxItem >AlfaNumeric</ComboBoxItem>
         </ComboBox>
-      
-        <Button x:Name="btn_Accept" Content="Accept" Grid.Column="2" HorizontalAlignment="Left" Margin="186,107,0,0" VerticalAlignment="Top" Width="74" Click="Btn_Accept_Click" Background="LightGray"/>
+
+        <Button x:Name="btn_Accept" Content="Accept" Grid.Column="2" HorizontalAlignment="Left" Margin="178.8,136,0,0" VerticalAlignment="Top" Width="74" Click="Btn_Accept_Click" Background="LightGray" Height="24"/>
+        <Canvas Grid.ColumnSpan="2" Grid.Column="1" HorizontalAlignment="Left" Height="150" Margin="4.4,10,0,0" VerticalAlignment="Top" Width="150">
+            <Image Name="dialImage" Height="150" Width="150" Stretch="Uniform"/>
+        </Canvas>
 
     </Grid>
 </Window>
