--- a/CameraEmguCV/DialDefinition.xaml
+++ b/CameraEmguCV/DialDefinition.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="CameraEmguCV.CadranDefinition"
+﻿<Window x:Class="CameraEmguCV.DialDefinition"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
