--- a/CameraEmguCV/MainWindow.xaml
+++ b/CameraEmguCV/MainWindow.xaml
@@ -7,86 +7,99 @@
         mc:Ignorable="d"
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         xmlns:fw="clr-namespace:SourceChord.FluentWPF;assembly=FluentWPF"
-         Height="573" FontSize="15" Width="1215" Loaded="Window_Loaded" WindowStartupLocation="CenterScreen" Visibility="Visible" ResizeMode="NoResize" Opacity="0.995" Icon="icon.png" >
+         Height="757" FontSize="15" Width="1295" Loaded="Window_Loaded" WindowStartupLocation="CenterScreen" Visibility="Visible" ResizeMode="CanResize"  Icon="icon.png" >
 
-    <Grid Height="573" VerticalAlignment="Top" >
+    <Grid VerticalAlignment="Top" >
 
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="250"></ColumnDefinition>
-            <ColumnDefinition Width="*"></ColumnDefinition>
+            <ColumnDefinition Width="300"></ColumnDefinition>
+            <ColumnDefinition Width="680"></ColumnDefinition>
+            <ColumnDefinition Width="300"></ColumnDefinition>
         </Grid.ColumnDefinitions>
-        <Grid Grid.Column="0" fw:PointerTracker.Enabled="True" Background="#009999" >
-            <StackPanel >
 
 
-                <TextBlock Text="Options"  Margin="15" FontWeight="DemiBold" Foreground="White"/>
-                <ListView FontSize="15" >
+        <Grid Grid.Column="0" fw:PointerTracker.Enabled="True" Background="#009999"  Height="720" >
+            <Label Content="Options"  Margin="25,10,10,0" FontWeight="DemiBold" Foreground="White"/>
+            
+            <StackPanel Margin="0,100,0,0" >
+
+
+                <Separator BorderBrush="LightGray" BorderThickness="3"></Separator>
+
+                <ListView FontSize="15" Margin="0,10,0,0" >
 
                     <ListViewItem  Padding="0">
-                        <Button Name="btn_AddMarkers"  Background="{x:Null}" BorderBrush="{x:Null}" BorderThickness="0" Click="BtnAddMarkers_Click" Width="248" Margin="0,10,0,10">
-                            <StackPanel Orientation="Horizontal" Width="230">
+                        <Button Name="btn_AddMarkers"  Background="{x:Null}" BorderBrush="{x:Null}" BorderThickness="0" Click="BtnAddMarkers_Click" Width="300" Margin="0,0,0,0">
+                            <StackPanel Orientation="Horizontal" Width="280">
                                 <materialDesign:PackIcon Margin="0,0,15,0" Kind="ControlPoint" Height="20" Foreground="White"/>
                                 <TextBlock Text="Add Markers" VerticalAlignment="Center" Foreground="White"/>
                             </StackPanel>
                         </Button>
                     </ListViewItem>
-                    <ListViewItem Padding="1">
-                        <Button Name="btnAddDialMarkers" Background="{x:Null}" BorderBrush="{x:Null}" BorderThickness="0" Click="BtnAddMarkers_Click" Width="248" Margin="0,10,0,10" IsEnabled="False">
-                            <StackPanel Orientation="Horizontal" Width="230">
+                    <ListViewItem Padding="0">
+                        <Button Name="btnAddDialMarkers" Background="{x:Null}" BorderBrush="{x:Null}" BorderThickness="0" Click="BtnAddMarkers_Click" Width="300" Margin="0,0,0,0" IsEnabled="False">
+                            <StackPanel Orientation="Horizontal" Width="280">
                                 <materialDesign:PackIcon Margin="0,0,15,0" Kind="ControlPoint" Height="20" Foreground="White"/>
                                 <TextBlock Text="Add Dial Selection Markers" VerticalAlignment="Center" Foreground="White"/>
                             </StackPanel>
                         </Button>
                     </ListViewItem>
-                    <ListViewItem x:Name="btnLoadImage" Padding="1">
-                        <Button  Background="{x:Null}" BorderBrush="{x:Null}" BorderThickness="0" Click="BtnLoadImage_Click" Width="248" Margin="0,10,0,10">
-                            <StackPanel Orientation="Horizontal" Width="230">
-                                <materialDesign:PackIcon Margin="0,0,15,0" Kind="FileUpload" Height="20" Foreground="White"/>
-                                <TextBlock Text="Load Image" VerticalAlignment="Center" Foreground="White"/>
-                            </StackPanel>
-                        </Button>
-
-                    </ListViewItem>
-
-                    <ListViewItem Padding="1">
-                        <Button  Background="{x:Null}" BorderBrush="{x:Null}" BorderThickness="0" Click="btnDebugWindow_Click" Width="248" Margin="0,10,0,10">
-                            <StackPanel Orientation="Horizontal" Width="230">
-                                <materialDesign:PackIcon Margin="0,0,15,0" Kind="Build" Height="20" Foreground="White"/>
-                                <TextBlock Text="Define template" VerticalAlignment="Center" Foreground="White" />
-                            </StackPanel>
-                        </Button>
-
-                    </ListViewItem>
-                    <ListViewItem Padding="1">
-                        <Button  Background="{x:Null}" BorderBrush="{x:Null}" BorderThickness="0" Click="BtnReset_Click" Width="248" Margin="0,10,0,10">
-                            <StackPanel Orientation="Horizontal" Width="230">
+                    <ListViewItem Padding="0">
+                        <Button  Background="{x:Null}" BorderBrush="{x:Null}" BorderThickness="0" Click="BtnReset_Click" Width="300" Margin="0,0,0,0">
+                            <StackPanel Orientation="Horizontal" Width="280">
                                 <materialDesign:PackIcon Margin="0,0,15,0" Kind="SettingsBackupRestore" Height="20" Foreground="White"/>
                                 <TextBlock Text="Reset" VerticalAlignment="Center" Foreground="White"/>
                             </StackPanel>
                         </Button>
 
                     </ListViewItem>
-                    <ListViewItem Padding="1">
-                        <Button  Name="btnRunTests" Background="{x:Null}" BorderBrush="{x:Null}" BorderThickness="0" Click="BtnRunTests_Click" Width="248" Margin="0,10,0,10">
-                            <StackPanel Orientation="Horizontal" Width="230">
+                    <Separator BorderBrush="LightGray" BorderThickness="3"></Separator>
+
+
+                    <ListViewItem Padding="0">
+                        <Button  Background="{x:Null}" BorderBrush="{x:Null}" BorderThickness="0" Click="btnDebugWindow_Click" Width="300" Margin="0,0,0,0">
+                            <StackPanel Orientation="Horizontal" Width="280">
+                                <materialDesign:PackIcon Margin="0,0,15,0" Kind="Build" Height="20" Foreground="White"/>
+                                <TextBlock Text="Define template" VerticalAlignment="Center" Foreground="White" />
+                            </StackPanel>
+                        </Button>
+
+                    </ListViewItem>
+
+                    <ListViewItem Padding="0">
+                        <Button  Name="btnRunTests" Background="{x:Null}" BorderBrush="{x:Null}" BorderThickness="0" Click="BtnRunTests_Click" Width="300" Margin="0,0,0,0">
+                            <StackPanel Orientation="Horizontal" Width="280">
                                 <materialDesign:PackIcon Margin="0,0,15,0" Kind="Run" Height="20" Foreground="White"/>
                                 <TextBlock Text="Run Tests" VerticalAlignment="Center" Foreground="White"/>
                             </StackPanel>
                         </Button>
 
                     </ListViewItem>
-                    <ListViewItem Padding="1">
-                        <Button  Background="{x:Null}" BorderBrush="{x:Null}" BorderThickness="0" Click="btnSave_Click" Width="248" Margin="0,10,0,10">
-                            <StackPanel Orientation="Horizontal" Width="230">
+                    <ListViewItem x:Name="btnLoadImage" Padding="0">
+                        <Button  Background="{x:Null}" BorderBrush="{x:Null}" BorderThickness="0" Click="BtnLoadImage_Click" Width="300" Margin="0,0,0,0">
+                            <StackPanel Orientation="Horizontal" Width="280">
+                                <materialDesign:PackIcon Margin="0,0,15,0" Kind="FileUpload" Height="20" Foreground="White"/>
+                                <TextBlock Text="Load Image" VerticalAlignment="Center" Foreground="White"/>
+                            </StackPanel>
+                        </Button>
+
+                    </ListViewItem>
+                    <ListViewItem >
+                        <ComboBox x:Name="cbxCameraDevices"  HorizontalAlignment="Center"  VerticalAlignment="Top" Width="140" SelectionChanged="CbxCameraDevices_SelectionChanged" Background="LightGray"/>
+                    </ListViewItem>
+                    <Separator BorderBrush="LightGray" BorderThickness="3"></Separator>
+                    <ListViewItem Padding="0">
+                        <Button  Background="{x:Null}" BorderBrush="{x:Null}" BorderThickness="0" Click="btnSave_Click" Width="300" Margin="0,0,0,0">
+                            <StackPanel Orientation="Horizontal" Width="280">
                                 <materialDesign:PackIcon Margin="0,0,15,0" Kind="FileDownload" Height="20" Foreground="White"/>
                                 <TextBlock Text="Save Screen" VerticalAlignment="Center" Foreground="White"/>
                             </StackPanel>
                         </Button>
 
                     </ListViewItem>
-                    <ListViewItem Padding="1">
-                        <Button  Background="{x:Null}" BorderBrush="{x:Null}" BorderThickness="0" Click="btnLoad_Click" Width="248" Margin="0,10,0,10">
-                            <StackPanel Orientation="Horizontal" Width="230">
+                    <ListViewItem Padding="0">
+                        <Button  Background="{x:Null}" BorderBrush="{x:Null}" BorderThickness="0" Click="btnLoad_Click" Width="300" Margin="0,0,0,0">
+                            <StackPanel Orientation="Horizontal" Width="280">
                                 <materialDesign:PackIcon Margin="0,0,15,0" Kind="FileUpload" Height="20" Foreground="White"/>
                                 <TextBlock Text="Load Screen" VerticalAlignment="Center" Foreground="White"/>
                             </StackPanel>
@@ -95,13 +108,22 @@
                     </ListViewItem>
 
                 </ListView>
-
+                
             </StackPanel>
+            
         </Grid>
 
-        <Grid Grid.Column="1" Background="White"  >
+        <Grid Grid.Column="1" Height="720" Background="Black" Opacity="0.25" />
 
-            <TreeView HorizontalAlignment="Left" Height="398" Margin="654,33,0,0" VerticalAlignment="Top" Width="287" x:Name="tree" BorderBrush="DarkGray" BorderThickness="1" >
+
+
+        <Canvas Name="mainCanvas" Panel.ZIndex="1"    Width="640" Height="520" VerticalAlignment="Center"  HorizontalAlignment="Center" Grid.Column="1"  >
+            <Image  Name="image1"  Height="520" Width="640" Panel.ZIndex="0" MouseLeftButtonDown="MainCanvas_MouseLeftButtonDown" MouseRightButtonDown="MainCanvas_MouseRightButtonDown"  />
+        </Canvas>
+        
+
+        <Grid Grid.Column="2" Background="#009999" Height="720" >
+            <TreeView  Height="720" Margin="25,50" Width="270" x:Name="tree" BorderBrush="DarkGray" Background="#007271" BorderThickness="0">
 
                 <TreeView.Resources>
                     <Style TargetType="{x:Type TreeViewItem}">
@@ -109,7 +131,7 @@
                             <Setter.Value>
                                 <DataTemplate>
                                     <StackPanel Orientation="Horizontal">
-                                        <TextBlock VerticalAlignment="Center" Text="{Binding}" Foreground="Black"/>
+                                        <TextBlock VerticalAlignment="Center" Text="{Binding}" Foreground="White"/>
                                     </StackPanel>
                                 </DataTemplate>
                             </Setter.Value>
@@ -117,16 +139,9 @@
                     </Style>
                 </TreeView.Resources>
             </TreeView>
-            <Label Content="Type of dial" HorizontalAlignment="Left" Margin="654,0,0,0" VerticalAlignment="Top" Width="287" Foreground="Black"/>
-
+            <Label Content="Type of dial" HorizontalAlignment="Left" Margin="25,10,10,0" VerticalAlignment="Top" Width="240" FontSize="15" FontWeight="DemiBold" Foreground="White"/>
         </Grid>
 
 
-        <Canvas Name="mainCanvas" Panel.ZIndex="1"    Width="640" Height="360" VerticalAlignment="Top"  HorizontalAlignment="Left" Grid.Column="1"  >
-            <Image  Name="image1"  Height="360" Width="640" Panel.ZIndex="0" MouseLeftButtonDown="MainCanvas_MouseLeftButtonDown" MouseRightButtonDown="MainCanvas_MouseRightButtonDown"   />
-        </Canvas>
-        <Button Name="btnAddMarkers" Content="Add Markers" Margin="-267,578,477,38" Click="BtnAddMarkers_Click" Background="LightGray" Height="Auto"/>
-        <ComboBox Name="cbxCameraDevices"  HorizontalAlignment="Left" Margin="55,488,0,0" VerticalAlignment="Top" Width="140" SelectionChanged="CbxCameraDevices_SelectionChanged" Background="LightGray"/>
-      
     </Grid>
 </Window>
